logs/pyvttbl.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dictset-0.3.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pystaggrelite3-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pyvttbl'...
Listing './lib/python3.5/site-packages/pyvttbl/examples'...
Compiling './lib/python3.5/site-packages/pyvttbl/examples/betweenAVOVA_omega-squared.py'...
***   File "./lib/python3.5/site-packages/pyvttbl/examples/betweenAVOVA_omega-squared.py", line 17
    print df
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyvttbl/misc'...
Listing './lib/python3.5/site-packages/pyvttbl/plotting'...
Listing './lib/python3.5/site-packages/pyvttbl/stats'...
Compiling './lib/python3.5/site-packages/pyvttbl/stats/_pstat.py'...
***   File "./lib/python3.5/site-packages/pyvttbl/stats/_pstat.py", line 293
    if fcn1 <> None:
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyvttbl/stats/_stats.py'...
***   File "./lib/python3.5/site-packages/pyvttbl/stats/_stats.py", line 249
    raise ValueError, "can't have two dispatches on "+str(t)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyvttbl/stats/ols.py'...
***   File "./lib/python3.5/site-packages/pyvttbl/stats/ols.py", line 142
    print '\n=============================================================================='
                                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyvttbl/tests'...
Compiling './lib/python3.5/site-packages/pyvttbl/tests/_datafile_replacer.py'...
***   File "./lib/python3.5/site-packages/pyvttbl/tests/_datafile_replacer.py", line 5
    print f
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyvttbl/tools'...
Listing './lib/python3.5/site-packages/pyvttbl-0.5.2.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './pyvttbl'...
Listing './pyvttbl/tests'...
Listing './pyvttbl/tests/data'...
Listing './pyvttbl/tests/output'...
Listing './share'...
Listing './share/python-wheels'...
